# hello-world-rush

./: .env  Cargo.toml  build.rs  dockerfile
src/: main copy.rs  main.rs  main.rs-back  main.rs-download
src/controllers/: stock.rs
src/routes/: mod.rs
src/services/: fetch_data.rs  mod.rs
static/: style.css
templates/: app.html
