[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-files = "0.6.0"  # Untuk melayani file statis seperti CSS
tera = "1.15.0"        # Untuk template rendering
serde = { version = "1.0", features = ["derive"] }  # Untuk serialisasi
serde_json = "1.0"     # Untuk JSON serialization
tokio = { version = "1", features = ["full"] }  # Untuk async runtime
rand = "0.8"  # Untuk menghasilkan angka acak
