[package]
name = "download"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-files = "0.6.0"
tera = "1.15.0"
serde_json = "1.0"
rand = "0.8"
reqwest = "0.12.9"
indicatif = "0.17.9"
tokio = { version = "1.14.0", features = ["full"] }
odbc-api = "10.0.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[build-dependencies]
winres = "0.1"